--- a/playbooks/bopi-host.yml
+++ b/playbooks/bopi-host.yml
@@ -143,6 +143,7 @@
     - name: Create host IPv4 and IPv6
       community.general.nios_host_record:
         name: "{{ object_name }}"
+        configure_for_dns: no
         view: "{{ request_view }}"
         ipv4addrs:
           - ipv4addr: "{{ request_ipv4 }}"
@@ -161,6 +162,7 @@
     - name: Create host IPv4 only
       community.general.nios_host_record:
         name: "{{ object_name }}"
+        configure_for_dns: no
         view: "{{ request_view }}"
         ipv4addrs:
           - ipv4addr: "{{ request_ipv4 }}"
