--- a/playbooks/bopi-host.yml
+++ b/playbooks/bopi-host.yml
@@ -145,7 +145,7 @@
     - name: Create host IPv4 and IPv6
       community.general.nios_host_record:
         name: "{{ object_name }}"
-        configure_for_dns: add_to_dns
+        configure_for_dns: "{{ add_to_dns }}"
         view: "{{ request_view }}"
         ipv4addrs:
           - ipv4addr: "{{ request_ipv4 }}"
@@ -164,7 +164,7 @@
     - name: Create host IPv4 only
       community.general.nios_host_record:
         name: "{{ object_name }}"
-        configure_for_dns: add_to_dns
+        configure_for_dns: "{{ add_to_dns }}"
         view: "{{ request_view }}"
         ipv4addrs:
           - ipv4addr: "{{ request_ipv4 }}"
